# pycinterface

./: .gitignore  CMakeLists.txt  ImageTypes.h  OsDetection.h  README.md  create_python_module.py  generate_wrapper_code.py  native_library_wrapper.py  pycinterface.cpp  test.py  test_pycinterface.py  wrapper_code_generation.py
src/: CMakeLists.txt  ImageTypes.h  create_python_module.py  native.py  native_library_wrapper.py  pycinterface.cpp  test_pycinterface.py
